--- a/zerif-lite-child/style.css
+++ b/zerif-lite-child/style.css
@@ -1,5 +1,5 @@
 /*
-   Theme Name: Zerif Lite Child
+ This is test  Theme Name: Zerif Lite Child
    Theme URI: https://www.themeisle.com/ 
    Description: This is a custom child theme I have created.
    Author: Chuck Norris Author
